--- a/index.html
+++ b/index.html
@@ -218,6 +218,7 @@
             <div class="mt-4 flex flex-wrap items-center gap-2">
               <button class="inline-flex items-center gap-2 rounded-lg px-3 py-2 text-sm" style="border:1px solid var(--line)" data-modal="p2"><i class="fas fa-eye"></i> View</button>
               <button class="inline-flex items-center gap-2 rounded-lg px-3 py-2 text-sm" style="border:1px solid var(--line)" data-detail="d2"><i class="fas fa-info-circle"></i> Details</button>
+              <a href="./AI_Milestones.pdf" target="_blank" rel="noopener" class="inline-flex items-center gap-2 rounded-lg px-3 py-2 text-sm" style="border:1px solid var(--line)"><i class="fa-solid fa-file-lines"></i> Documentation</a>
             </div>
           </div>
         </article>
@@ -234,6 +235,7 @@
             <div class="mt-4 flex flex-wrap items-center gap-2">
               <button class="inline-flex items-center gap-2 rounded-lg px-3 py-2 text-sm" style="border:1px solid var(--line)" data-modal="p3"><i class="fas fa-eye"></i> View</button>
               <button class="inline-flex items-center gap-2 rounded-lg px-3 py-2 text-sm" style="border:1px solid var(--line)" data-detail="d3"><i class="fas fa-info-circle"></i> Details</button>
+              <a href="./SkinCare_Sensei.pdf" target="_blank" rel="noopener" class="inline-flex items-center gap-2 rounded-lg px-3 py-2 text-sm" style="border:1px solid var(--line)"><i class="fas fa-file-lines"></i> Documentation</a>
               <a href="https://chatgpt.com/g/g-690511ecce3c8191b67279ca55c600e7-skincare-sensei" target="_blank" rel="noopener noreferrer" class="inline-flex items-center gap-2 rounded-lg px-3 py-2 text-sm" style="border:1px solid var(--line); background:linear-gradient(135deg, var(--accent), var(--accent-2)); color:#0b1220;"><i class="fas fa-robot"></i> Launch Chatbot</a>
             </div>
           </div>
@@ -475,7 +477,7 @@
 
     const details = {
       d1: `<h3 class='font-semibold text-xl'>AI & ML Foundations — Details</h3>
-           <p style='color:var(--muted)'>This module is built as a short slide presentation and a quick quiz to check understanding. It covers what AI and ML mean in simple terms, how models are grouped, and why ethics matter. Great for first time learners and team onboarding.</p>`,
+           <p style='color:var(--muted)'>This module is built as a quick quiz to check understanding. It covers what AI and ML mean in simple terms, how models are grouped, and why ethics matter. Great for first time learners and team onboarding.</p>`,
       d2: `<h3 class='font-semibold text-xl'>Evolution of AI — Details</h3>
            <p style='color:var(--muted)'>A talk that walks through key waves of AI, past winters, and what we can learn for planning. Includes a timeline, plain language notes, and a reading list for deeper study.</p>`,
       d3: `<h3 class='font-semibold text-xl'>SkinCare Sensei — Details</h3>
