--- a/index.html
+++ b/index.html
@@ -344,6 +344,7 @@
             <div class="mt-3 flex flex-wrap items-center gap-2 text-xs" style="color:var(--muted)"><span class="px-2 py-0.5 rounded-md border" style="border-color:var(--line)">Assignment</span><span class="px-2 py-0.5 rounded-md border" style="border-color:var(--line)">Course</span></div>
             <div class="mt-4 flex flex-wrap items-center gap-2">
               <button class="inline-flex items-center gap-2 rounded-lg px-3 py-2 text-sm" style="border:1px solid var(--line)" data-modal="p9"><i class="fas fa-eye"></i> View</button>
+              <a href="./ML_vs_DL_Doc.pdf" target="_blank" rel="noopener" class="inline-flex items-center gap-2 rounded-lg px-3 py-2 text-sm" style="border:1px solid var(--line)"><i class="fa-solid fa-file-lines"></i> Documentation</a>
             </div>
           </div>
         </article>
