Add Workshop 3 Content

--- a/index.html
+++ b/index.html
@@ -330,6 +330,7 @@
             <div class="mt-3 flex flex-wrap items-center gap-2 text-xs" style="color:var(--muted)"><span class="px-2 py-0.5 rounded-md border" style="border-color:var(--line)">Quiz</span><span class="px-2 py-0.5 rounded-md border" style="border-color:var(--line)">Course</span></div>
             <div class="mt-4 flex flex-wrap items-center gap-2">
               <button class="inline-flex items-center gap-2 rounded-lg px-3 py-2 text-sm" style="border:1px solid var(--line)" data-modal="p8"><i class="fas fa-eye"></i> View</button>
+            </div>
           </div>
         </article>
 
@@ -363,6 +364,77 @@
             </div>
           </div>
         </article>
+
+        <!-- 3.1 Adapting to Challenges -->
+        <article class="project-card glass group rounded-2xl p-4 shadow-ring hover:shadow-accent transition" data-tags="course">
+          <div class="overflow-hidden rounded-xl ring-accent">
+            <img src="https://images.unsplash.com/photo-1500530855697-b586d89ba3ee?q=80&w=1680&auto=format&fit=crop" alt="Adapting to challenges" class="h-44 w-full object-cover transition-transform duration-500 group-hover:scale-105" />
+          </div>
+          <div class="p-3">
+            <h3 class="mt-2 font-semibold">Adapting to Challenges</h3>
+            <p class="mt-2 text-sm" style="color:var(--muted)">Biblical reflection on Moses and Esther focusing on adaptive leadership through faith and wisdom.</p>
+            <div class="mt-3 flex flex-wrap items-center gap-2 text-xs" style="color:var(--muted)"><span class="px-2 py-0.5 rounded-md border" style="border-color:var(--line)">Devotional</span><span class="px-2 py-0.5 rounded-md border" style="border-color:var(--line)">Course</span></div>
+            <div class="mt-4 flex flex-wrap items-center gap-2">
+              <button class="inline-flex items-center gap-2 rounded-lg px-3 py-2 text-sm" style="border:1px solid var(--line)" data-modal="p11"><i class="fas fa-eye"></i> View</button>
+              <a href="./3_1_Assignment_Adapting_to_Challenges.pdf" target="_blank" rel="noopener" class="inline-flex items-center gap-2 rounded-lg px-3 py-2 text-sm" style="border:1px solid var(--line)"><i class="fa-solid fa-file-lines"></i> Documentation</a>
+            </div>
+          </div>
+        </article>
+
+        <!-- 3.2 Deep Learning and Neural Networks -->
+        <article class="project-card glass group rounded-2xl p-4 shadow-ring hover:shadow-accent transition" data-tags="course">
+          <div class="overflow-hidden rounded-xl ring-accent">
+            <img src="https://images.unsplash.com/photo-1518770660439-4636190af475?q=80&w=1680&auto=format&fit=crop" alt="Deep learning and neural networks" class="h-44 w-full object-cover transition-transform duration-500 group-hover:scale-105" />
+          </div>
+          <div class="p-3">
+            <h3 class="mt-2 font-semibold">Deep Learning and Neural Networks</h3>
+            <p class="mt-2 text-sm" style="color:var(--muted)">Lesson and quiz that made neural networks, CNNs, and RNNs feel concrete instead of abstract.</p>
+            <div class="mt-3 flex flex-wrap items-center gap-2 text-xs" style="color:var(--muted)">
+              <span class="px-2 py-0.5 rounded-md border" style="border-color:var(--line)">Lesson</span>
+              <span class="px-2 py-0.5 rounded-md border" style="border-color:var(--line)">Quiz</span>
+            </div>
+            <div class="mt-4 flex flex-wrap items-center gap-2">
+              <button class="inline-flex items-center gap-2 rounded-lg px-3 py-2 text-sm" style="border:1px solid var(--line)" data-modal="p12"><i class="fas fa-eye"></i> View</button>
+            </div>
+          </div>
+        </article>
+
+        <!-- 3.3 Training Methods Coach -->
+        <article class="project-card glass group rounded-2xl p-4 shadow-ring hover:shadow-accent transition" data-tags="course">
+          <div class="overflow-hidden rounded-xl ring-accent">
+            <img src="https://images.unsplash.com/photo-1551434678-e076c223a692?q=80&w=1680&auto=format&fit=crop" alt="Training methods coach" class="h-44 w-full object-cover transition-transform duration-500 group-hover:scale-105" />
+          </div>
+          <div class="p-3">
+            <h3 class="mt-2 font-semibold">Training Methods Coach</h3>
+            <p class="mt-2 text-sm" style="color:var(--muted)">Interactive chatbot activity that walked through supervised, unsupervised, and reinforcement learning.</p>
+            <div class="mt-3 flex flex-wrap items-center gap-2 text-xs" style="color:var(--muted)">
+              <span class="px-2 py-0.5 rounded-md border" style="border-color:var(--line)">Assignment</span>
+              <span class="px-2 py-0.5 rounded-md border" style="border-color:var(--line)">AI Coach</span>
+            </div>
+            <div class="mt-4 flex flex-wrap items-center gap-2">
+              <button class="inline-flex items-center gap-2 rounded-lg px-3 py-2 text-sm" style="border:1px solid var(--line)" data-modal="p13"><i class="fas fa-eye"></i> View</button>
+            </div>
+          </div>
+        </article>
+
+        <!-- 3.4 Communicating for Learning -->
+        <article class="project-card glass group rounded-2xl p-4 shadow-ring hover:shadow-accent transition" data-tags="course">
+          <div class="overflow-hidden rounded-xl ring-accent">
+            <img src="https://images.unsplash.com/photo-1522202176988-66273c2fd55f?q=80&w=1680&auto=format&fit=crop" alt="Communicating for learning" class="h-44 w-full object-cover transition-transform duration-500 group-hover:scale-105" />
+          </div>
+          <div class="p-3">
+            <h3 class="mt-2 font-semibold">Communicating for Learning</h3>
+            <p class="mt-2 text-sm" style="color:var(--muted)">Discussion where I practiced explaining neural networks in simple language for non technical teammates.</p>
+            <div class="mt-3 flex flex-wrap items-center gap-2 text-xs" style="color:var(--muted)">
+              <span class="px-2 py-0.5 rounded-md border" style="border-color:var(--line)">Discussion</span>
+              <span class="px-2 py-0.5 rounded-md border" style="border-color:var(--line)">Course</span>
+            </div>
+            <div class="mt-4 flex flex-wrap items-center gap-2">
+              <button class="inline-flex items-center gap-2 rounded-lg px-3 py-2 text-sm" style="border:1px solid var(--line)" data-modal="p14"><i class="fas fa-eye"></i> View</button>
+            </div>
+          </div>
+        </article>
+
       </div>
     </div>
   </section>
@@ -467,7 +539,7 @@
     // Persisted theme
     const root = document.documentElement;
     function setTheme(theme){ if(theme==='day'){ root.setAttribute('data-theme','day'); } else { root.removeAttribute('data-theme'); } localStorage.setItem('theme', theme||'night'); }
-    function setAccent(name){ root.removeAttribute('data-theme'); const current = localStorage.getItem('theme')||'night'; if(current!=='night'&&current!=='day') setTheme('night'); if(name==='orchid') root.setAttribute('data-theme','orchid'); else if(name==='emerald') root.setAttribute('data-theme','emerald'); else root.removeAttribute('data-theme'); localStorage.setItem('accent', name); }
+    function setAccent(name){ root.removeAttribute('data-theme'); const current = localStorage.getItem('theme')||'night'; if(current!=='night'&&current!=='day') setTheme('night'); if(name==='orchid') root.setAttribute('data-theme','orchid'); else if(name==='emerald') setAccent('emerald'); else root.removeAttribute('data-theme'); localStorage.setItem('accent', name); }
     (function initPersist(){ const t=localStorage.getItem('theme'); const a=localStorage.getItem('accent'); if(t==='day') setTheme('day'); if(a==='orchid') setAccent('orchid'); if(a==='emerald') setAccent('emerald'); })();
 
     // Theme menu
@@ -537,31 +609,71 @@
        <li>I understood how self-awareness affects the way I lead others</li>
        <li>I wrote a short reflection that felt honest and personal</li>
        <li>I learned to look for wisdom instead of rushing decisions</li>
-     </ul>` ,
+     </ul>`,
 
-p8: `<h3 class="font-semibold text-xl">2.2 Quiz: Types of ML</h3>
+      p8: `<h3 class="font-semibold text-xl">2.2 Quiz: Types of ML</h3>
      <p style="color:var(--muted)">The quiz made me practice identifying ML types quickly. I started recognizing patterns like “Is there a label?” or “Is the model learning by reward?” which helped me answer faster.</p>
      <ul class="mt-3 list-disc pl-5">
        <li>I became more confident separating supervised, unsupervised, and RL</li>
        <li>Timed questions improved how fast I recall examples</li>
        <li>Reviewing the slides before attempting boosted my score</li>
-     </ul>` ,
+     </ul>`,
 
-p9: `<h3 class="font-semibold text-xl">2.3 ML vs DL</h3>
-     <p style="color:var(--muted)">Comparing ML and DL side-by-side helped me understand why both exist. ML feels practical for smaller, structured data, while DL handles complex inputs like images or text much better.</p>
+      p9: `<h3 class="font-semibold text-xl">2.3 ML vs DL</h3>
+     <p style="color:var(--muted)">Comparing ML and DL side by side helped me understand why both exist. ML feels practical for smaller, structured data, while DL handles complex inputs like images or text much better.</p>
      <ul class="mt-3 list-disc pl-5">
        <li>I chose one clear ML case and one DL case with real applications</li>
        <li>I explained why the other method would not be ideal for each task</li>
        <li>I used data size, features, and compute needs to justify choices</li>
-     </ul>` ,
+     </ul>`,
 
-p10: `<h3 class="font-semibold text-xl">2.4 Adaptability and Change</h3>
+      p10: `<h3 class="font-semibold text-xl">2.4 Adaptability and Change</h3>
       <p style="color:var(--muted)">This discussion helped me see how leaders adjust plans the same way ML models learn. Sharing my real example made me reflect on how feedback and small experiments reduce resistance to change.</p>
       <ul class="mt-3 list-disc pl-5">
-        <li>I described one real case and one AI-created scenario</li>
+        <li>I described one real case and one AI created scenario</li>
         <li>I focused on listening, small iterations, and clear communication</li>
         <li>I posted a peer reply that added one helpful insight from my experience</li>
-      </ul>`
+      </ul>`,
+
+      p11: `<h3 class="font-semibold text-xl">3.1 Adapting to Challenges</h3>
+<p style="color:var(--muted)">
+  Reflecting on Moses and Esther helped me see how spiritual wisdom supports adaptive leadership. Their stories reminded me that uncertainty does not mean I am unprepared. It means I need to slow down, seek guidance, and respond with courage.
+</p>
+<ul class="mt-3 list-disc pl-5">
+  <li>Moses showed me that doubt can be overcome by trusting God's direction</li>
+  <li>Esther's courage encouraged me to face difficult decisions with wisdom and calm planning</li>
+  <li>This reflection helped me think about how faith can guide my own leadership in stressful or risky moments</li>
+</ul>`,
+
+      p12: `<h3 class="font-semibold text-xl">3.2 Deep Learning and Neural Networks</h3>
+<p style="color:var(--muted)">
+  Working through the deep learning lesson and quiz made neural networks feel much less mysterious. Seeing examples with images and sequences helped me connect the theory to real tasks instead of just new vocabulary.
+</p>
+<ul class="mt-3 list-disc pl-5">
+  <li>I practiced how feedforward networks, CNNs, and RNNs handle different kinds of data</li>
+  <li>I noticed how activation functions like ReLU and sigmoid change what a network can learn</li>
+  <li>The quiz forced me to recall ideas quickly, which made the key terms stick in my mind</li>
+</ul>`,
+
+      p13: `<h3 class="font-semibold text-xl">3.3 Training Methods Coach</h3>
+<p style="color:var(--muted)">
+  Chatting with the training methods coach felt like studying with a patient partner. I could test my understanding of supervised, unsupervised, and reinforcement learning without feeling judged, and ask follow up questions any time I felt stuck.
+</p>
+<ul class="mt-3 list-disc pl-5">
+  <li>I explained in my own words how a supervised model learns from labeled examples</li>
+  <li>I used the chatbot to check my thinking on clustering, rewards, and basic optimization ideas</li>
+  <li>The back and forth conversation helped me slow down and connect the theory to real situations</li>
+</ul>`,
+
+      p14: `<h3 class="font-semibold text-xl">3.4 Communicating for Learning</h3>
+<p style="color:var(--muted)">
+  This discussion pushed me to explain neural networks in language that a non technical friend could follow. It made me realize that if I can tell a simple story about inputs, hidden layers, and outputs, then I actually understand the topic much better.
+</p>
+<ul class="mt-3 list-disc pl-5">
+  <li>I wrote a short explanation that avoided heavy jargon and focused on everyday analogies</li>
+  <li>I paid attention to tone, clarity, and how I structured the explanation for someone new to AI</li>
+  <li>Reading classmates posts showed me different ways to teach the same idea, which gave me new phrasing to try</li>
+</ul>`
     };
 
     const details = {
@@ -576,7 +688,7 @@ p10: `<h3 class="font-semibold text-xl">2.4 Adaptability and Change</h3>
       d5: `<h3 class='font-semibold text-xl'>Social Media Sentiment — Details</h3>
            <p style='color:var(--muted)'>Scrapes and cleans posts, scores sentiment, finds topics with LDA, and publishes a Tableau dashboard.</p>`,
       d6: `<h3 class='font-semibold text-xl'>LinkedIn Job Market — Details</h3>
-           <p style='color:var(--muted)'>Parses job JSON, normalizes skills, stores in MongoDB, and charts hiring demand and pay ranges.</p>`,
+           <p style='color:'var(--muted)'>Parses job JSON, normalizes skills, stores in MongoDB, and charts hiring demand and pay ranges.</p>`,
       d7: `<h3 class='font-semibold text-xl'>2.1 Empowered to Lead — Details</h3>
            <p style='color:var(--muted)'>Faith integrated reflection. Use your authentic voice. No AI writing. Connect passages to specific leadership choices.</p>`,
       d8: `<h3 class='font-semibold text-xl'>2.2 Quiz — Details</h3>
